// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render in disabled state 1`] = `
<DocumentFragment>
  <div
    data-testid="multi-autocomplete-component"
  >
    <input
      data-testid="multi-autocomplete-input"
      disabled=""
    />
    <button
      type="button"
    >
      trigger-search
    </button>
    <button
      type="button"
    >
      trigger-change
    </button>
  </div>
</DocumentFragment>
`;

exports[`Render in loading state 1`] = `
<DocumentFragment>
  <div
    data-testid="multi-autocomplete-component"
  >
    <input
      data-testid="multi-autocomplete-input"
    />
    <button
      type="button"
    >
      trigger-search
    </button>
    <button
      type="button"
    >
      trigger-change
    </button>
  </div>
</DocumentFragment>
`;

exports[`Render with given value 1`] = `
<DocumentFragment>
  <div
    data-testid="multi-autocomplete-component"
  >
    <input
      data-testid="multi-autocomplete-input"
    />
    <button
      type="button"
    >
      trigger-search
    </button>
    <button
      type="button"
    >
      trigger-change
    </button>
  </div>
</DocumentFragment>
`;
